examples/passing/RecordLabels.purs
module Main where

import RecordLabels as RecordLabels

main = RecordLabels.main
