examples/failing/DuplicateTypeVars.purs
module Main where

type Foo a a = a
